; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mk_str_n.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mk_str_n.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i8*, i64 } @mg_mk_str_n(i8* %0, i64 %1) #0 {
  %3 = alloca %struct.mg_str, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %3, i32 0, i32 0
  %7 = load i8*, i8** %4, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %3, i32 0, i32 1
  %9 = load i64, i64* %5, align 8
  store i64 %9, i64* %8, align 8
  %10 = bitcast %struct.mg_str* %3 to { i8*, i64 }*
  %11 = load { i8*, i64 }, { i8*, i64 }* %10, align 8
  ret { i8*, i64 } %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
